--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5"
+    "sqlite3": "^3.0.9"
+    "sequelize": "^1.7.0",
   }
-}
+}   
